Bug 341629 - wired conx autoneg option forced
Summary: wired conx autoneg option forced
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-07 12:35 UTC by p92
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description p92 2014-12-07 12:35:28 UTC
I tried to disable autoneg option in wired tab when configuring a new wired cnx but each time i return to modify the cnx parameters, the autoneg option is on ! 
so I cannot set particular parameter such as mtu...

Reproducible: Always

Steps to Reproduce:
1. set up a new wired conx
2. disable autoneg
3. setup mtu
4. save
5. return to edit the wired cnx parameters

Actual Results:  
the autoneg option is still on

Expected Results:  
autoneg option off
Comment 1 Jan Grulich 2014-12-08 08:43:26 UTC
Git commit a6bdeb495fe9bce9e126883e1f3c603a9ee2dc4f by Jan Grulich.
Committed on 08/12/2014 at 08:42.
Pushed by grulich into branch 'master'.

Do not forget to set loaded auto-negotiate state

M  +2    -0    libs/editor/settings/wiredconnectionwidget.cpp

http://commits.kde.org/plasma-nm/a6bdeb495fe9bce9e126883e1f3c603a9ee2dc4f
Comment 2 Jan Grulich 2014-12-08 08:43:46 UTC
Git commit eac82f57cd30eb7294dde10832bcd785d6d81ea6 by Jan Grulich.
Committed on 08/12/2014 at 08:42.
Pushed by grulich into branch '0.9.3'.

Do not forget to set loaded auto-negotiate state

M  +2    -0    libs/editor/settings/wiredconnectionwidget.cpp

http://commits.kde.org/plasma-nm/eac82f57cd30eb7294dde10832bcd785d6d81ea6
Comment 3 Jan Grulich 2014-12-08 08:45:48 UTC
Actually it was working correctly, just the widget didn't load stored value properly when you edited it again.