Do not forget to set loaded auto-negotiate state

BUG:341629